Initial site commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+---
+layout: default
+title: Home
+---
+
+<div class="jumbotron text-center">
+        <h1>{{ "Fun with Math & Machine Learning"}}</h1>
+        <p>Welcome to my page!</p> 
+</div>
+
