added parametric curve animation link

--- a/_posts/2018-10-30-parametric_curve.html
+++ b/_posts/2018-10-30-parametric_curve.html
@@ -9,4 +9,14 @@ Unlike a scalar-valued function such as \(y=f(x)\), a parametric curve can outpu
 such as x and y where y is a function of t and x is another function of t. 
 Therefore, x and y can move independently from each other on the xy-coordinate enabling us to produce 
 a curve that is not possible by \(y=f(x)\). For example, \(\vec{r}(t) = \langle cos(2t), sin(t) \rangle \) 
-  is a vector-valued function that goes back and forth on the same path. I created a video clip to illustrates this.
+is a vector-valued function that goes back and forth on the same path. I created a video clip to illustrates this and posted it on YouTube.
+You can click the below screenshot to jump to the video.
+<div style="height:20px;"></div>
+<a href="https://www.youtube.com/watch?v=GToRQ4Tiqrs"><img src="https://img.youtube.com/vi/GToRQ4Tiqrs/0.jpg" 
+  title="Parametric Curve Demo" 
+  alt="Parametric curve demo on YouTube"></a>
+
+<div style="height:20px;"></div>
+Animation was created in Python with numpy & matplotlib.  Source code is available in
+<a href="https://github.com/hideyukiinada/math/blob/master/project/animate_parametric_curve_cos_2_theta_sin_theta">my repo</a> 
+on github.
