Added more description about the cos/sin value changes for the parametric curve demo

--- a/_posts/2018-10-30-parametric_curve.html
+++ b/_posts/2018-10-30-parametric_curve.html
@@ -8,8 +8,20 @@ A parametric curve is a very fascinating feature in math.<!--more-->
 Unlike a scalar-valued function such as \(y=f(x)\), a parametric curve can output multiple values 
 such as x and y where y is a function of t and x is another function of t. 
 Therefore, x and y can move independently from each other on the xy-coordinate enabling us to produce 
-a curve that is not possible by \(y=f(x)\). For example, \(\vec{r}(t) = \langle cos(2t), sin(t) \rangle \) 
-is a vector-valued function that goes back and forth on the same path. I created a video clip to illustrates this and posted it on YouTube.
+a curve that is not possible by \(y=f(x)\). For example, \(\vec{r}(\theta) = \langle cos(2 \theta ), sin( \theta ) \rangle \) 
+is a vector-valued function that goes back and forth on the same path. 
+Below table shows how \(cos(2 \theta) \) and \(sin (\theta) \) change as \( \theta \) changes.
+
+<div style="height:20px;"></div>
+<img src="/assets/images/cos2theta_sin_theta_table.png" 
+  title="cos and sin value table for the parametric curve" 
+  alt="cos and sin value table for the parametric curve">
+<div style="height:20px;"></div>
+
+You can see that as \( \theta \) approaches \( \frac{1}{2} \pi \), the curve moves toward (-1, 1).
+Once \( \theta \) reaches \( \frac{1}{2} \pi \) and the curve reaches (-1, 1), it turns around and goes back on the same path towards (1, 0).
+
+I created a video clip to illustrates this and posted it on YouTube.
 You can click the below screenshot to jump to the video.
 <div style="height:20px;"></div>
 <a href="https://www.youtube.com/watch?v=GToRQ4Tiqrs"><img src="https://img.youtube.com/vi/GToRQ4Tiqrs/0.jpg" 
