--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -32,7 +32,7 @@ where
 <ul>
 <li>\(Z\) is the set of values of this layer before activation function (e.g. sigmoid) is applied.</li>
 <li>\(a_{prev}\) is previous layer's activation.</li>
-<li>zero\_pad is a function to put 0 around the matrix so that the convolution operation output will be the same size as the input matrix.</li>
+<li>zero_pad is a function to put 0 around the matrix so that the convolution operation output will be the same size as the input matrix.</li>
 <li>\(W\) is the convolution kernel (filter).</li>
 <li>\(*\) is the convolution operator.</li>
 <li>\(*_{stride2}\) denotes the convolution operation with strides=2.</li>
