Fixing grammatical errors

--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -842,7 +842,7 @@ We just have to calculate each of the 9 elements of the matrix \( (13) \) this t
 <hr>
 
 \begin{equation}
-W_= 
+\frac{\partial L}{\partial W} = 
 \begin{bmatrix}
 \frac{\partial L}{\partial z_{22}} \cdot a_{22} &
 
