Fixing grammatical errors

--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -2,7 +2,7 @@
 layout: math
 subject: math
 short_name: math
-title: Calculate CNN backprop with padding and stride is set to 2
+title: Calculate CNN backprop with padding and stride set to 2
 ---
 
 In this article, I'll discuss how you can calculate backprop for one layer of a convolutional neural network (CNN) when stride is set to two.
