Added note for convolution

--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -34,7 +34,7 @@ where
 <li>\(a_{prev}\) is previous layer's activation.</li>
 <li>zero_pad is a function to put 0 around the matrix so that the convolution operation output will be the same size as the input matrix.</li>
 <li>\(W\) is the convolution kernel (filter).</li>
-<li>\(*\) is the convolution operator.</li>
+<li>\(*\) is the convolution operator.  Note that convolution in machine learning means cross-correlation, and I'm following that naming convention.</li>
 <li>\(*_{stride2}\) denotes the convolution operation with stride is set to 2.</li>
 </ul>
 
