partial L partial w cleaned up

--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -786,7 +786,7 @@ Let's focus on first finding the dericvative weights for the first input channel
 <h5>\(\frac{\partial L}{\partial w_{23}^{(1, 1)}}\)</h5>
 
 \begin{equation}
-\frac{\partial L}{\partial w_{22}^{(1, 1)}} = 
+\frac{\partial L}{\partial w_{23}^{(1, 1)}} = 
 \frac{\partial L}{\partial z_{11}^{(1)}} \cdot \frac{\partial z_{11}^{(1)}}{\partial w_{23}^{(1,1)}} +
 \frac{\partial L}{\partial z_{12}^{(1)}} \cdot \frac{\partial z_{12}^{(1)}}{\partial w_{23}^{(1,1)}} +
 \frac{\partial L}{\partial z_{21}^{(1)}} \cdot \frac{\partial z_{21}^{(1)}}{\partial w_{23}^{(1,1)}} +
@@ -822,7 +822,7 @@ Let's focus on first finding the dericvative weights for the first input channel
 <h5>\(\frac{\partial L}{\partial w_{31}^{(1, 1)}}\)</h5>
 
 \begin{equation}
-\frac{\partial L}{\partial w_{22}^{(1, 1)}} = 
+\frac{\partial L}{\partial w_{31}^{(1, 1)}} = 
 \frac{\partial L}{\partial z_{11}^{(1)}} \cdot \frac{\partial z_{11}^{(1)}}{\partial w_{31}^{(1,1)}} +
 \frac{\partial L}{\partial z_{12}^{(1)}} \cdot \frac{\partial z_{12}^{(1)}}{\partial w_{31}^{(1,1)}} +
 \frac{\partial L}{\partial z_{21}^{(1)}} \cdot \frac{\partial z_{21}^{(1)}}{\partial w_{31}^{(1,1)}} +
@@ -857,7 +857,7 @@ Let's focus on first finding the dericvative weights for the first input channel
 <h5>\(\frac{\partial L}{\partial w_{32}^{(1, 1)}}\)</h5>
 
 \begin{equation}
-\frac{\partial L}{\partial w_{22}^{(1, 1)}} = 
+\frac{\partial L}{\partial w_{32}^{(1, 1)}} = 
 \frac{\partial L}{\partial z_{11}^{(1)}} \cdot \frac{\partial z_{11}^{(1)}}{\partial w_{32}^{(1,1)}} +
 \frac{\partial L}{\partial z_{12}^{(1)}} \cdot \frac{\partial z_{12}^{(1)}}{\partial w_{32}^{(1,1)}} +
 \frac{\partial L}{\partial z_{21}^{(1)}} \cdot \frac{\partial z_{21}^{(1)}}{\partial w_{32}^{(1,1)}} +
@@ -893,7 +893,7 @@ Let's focus on first finding the dericvative weights for the first input channel
 <h5>\(\frac{\partial L}{\partial w_{33}^{(1, 1)}}\)</h5>
 
 \begin{equation}
-\frac{\partial L}{\partial w_{22}^{(1, 1)}} = 
+\frac{\partial L}{\partial w_{33}^{(1, 1)}} = 
 \frac{\partial L}{\partial z_{11}^{(1)}} \cdot \frac{\partial z_{11}^{(1)}}{\partial w_{33}^{(1,1)}} +
 \frac{\partial L}{\partial z_{12}^{(1)}} \cdot \frac{\partial z_{12}^{(1)}}{\partial w_{33}^{(1,1)}} +
 \frac{\partial L}{\partial z_{21}^{(1)}} \cdot \frac{\partial z_{21}^{(1)}}{\partial w_{33}^{(1,1)}} +
@@ -921,5 +921,5 @@ Let's focus on first finding the dericvative weights for the first input channel
 
 \begin{equation}
 \frac{\partial L}{\partial w_{33}^{(1, 1)}} = 
-\frac{\partial L}{\partial z_{11}^{(1)}} \cdot a_{22}^{(1)} +
+\frac{\partial L}{\partial z_{11}^{(1)}} \cdot a_{22}^{(1)}
 \end{equation}
